                                                         -*- coding: utf-8 -*-
Changes with Apache 2.5.0

  *) mod_ssl: Don't lose track of the SSL context if the ssl_run_pre_handshake()
     hook returns an error. [Graham Leggett]

  *) ab: Use caseless matching for HTTP tokens (e.g. content-length). PR 59111.
     [Yann Ylavic]

  *) mod_ssl: Fix a possible memory leak on restart for custom [EC]DH params.
     [Jan Kaluza, Yann Ylavic]

  *) mod_auth_digest: Fix compatibility with expression-based Authname. PR59039.
     [Eric Covener]

  *) mpm: Add a complete_connection hook that confirms whether an MPM is allowed
     to leave the WRITE_COMPLETION phase. Move filter code out of the MPMs.
     [Graham Leggett]

  *) mod_proxy_http2: using single connection for several requests *if*
     master connection uses HTTP/2 itself. Not yet hardened under load.
     [Stefan Eissing]

  *) core: Added support for HTTP code 451. PR58985.
     [Yehuda Katz <yehuda ymkatz.net>, Jim Jagielski]

  *) mod_ssl: Add support for OpenSSL 1.1.0. [Rainer Jung]
 
  *) mod_proxy_http2: new experimental http2 proxy module for h2: and h2c: proxy
     urls. Uses, so far, one connection per request, reuses connections.
     [Stefan Eissing]
  
  *) event: use pre_connection hook to properly initialize connection state for
     slave connections. use protocol_switch hook to initialize server config
     early based on SNI selected vhost. 
     [Stefan Eissing]
  
  *) mod_filter: Fix AddOutputFilterByType with non-content-level filters.
     PR58856 [Micha Lenk <micha lenk.info>]

  *) mod_cache: Consider Cache-Control: s-maxage in expiration
     calculations.  [Eric Covener]

  *) mod_cache: Allow caching of responses with an Expires header
     in the past that also has Cache-Control: max-age or s-maxage.
     PR55156. [Eric Covener]

  *) ap_expr: expression support for variable HTTP2=on|off
     [Stefan Eissing]

  *) mod_proxy_hcheck: Provide for dynamic background health