@@ -506,6 +506,7 @@
  *                         the request_rec, with ap_get_useragent_host()
  * 20150222.12 (2.5.0-dev) Add complete_connection hook,
  *                         ap_filter_complete_connection().
+ * 20150222.13 (2.5.0-dev) Add ap_create_request().
  */
 
 #define MODULE_MAGIC_COOKIE 0x41503235UL /* "AP25" */
@@ -513,7 +514,7 @@
 #ifndef MODULE_MAGIC_NUMBER_MAJOR
 #define MODULE_MAGIC_NUMBER_MAJOR 20150222
 #endif
-#define MODULE_MAGIC_NUMBER_MINOR 12                 /* 0...n */
+#define MODULE_MAGIC_NUMBER_MINOR 13                 /* 0...n */
 
 /**
  * Determine if the server's current MODULE_MAGIC_NUMBER is at least a
